--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="frutillas, fresas, chocolate, regalos">
     <meta name="description" content="fresas decoradas con chocolate para regalar">
     <!-- link de tipografía -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
@@ -58,13 +59,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/home-uno.jpg" class="d-block w-100 h-100" alt="foto fresas uno">
+                <img src="img/home-uno.jpg" class="d-block w-100 h-100" alt="foto de caja de fresas doradas">
               </div>
               <div class="carousel-item">
-                <img src="img/home-dos.jpg" class="d-block w-100 h-100" alt="foto fresas dos">
+                <img src="img/home-dos.jpg" class="d-block w-100 h-100" alt="foto de caja de fresas blanco">
               </div>
               <div class="carousel-item">
-                <img src="img/home-tres.jpg" class="d-block w-100 h-100" alt="foto fresas tres">
+                <img src="img/home-tres.jpg" class="d-block w-100 h-100" alt="foto de caja de fresas de chocolate">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
