--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="frutillas, fresas, fotos, galeria">
     <meta name="description" content="foto de los prductos y regalos">
     <!-- link de tipografía -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
@@ -56,20 +57,14 @@
             </h1>
         </div>
         <section class="galeria">
-            <div class="galeria__img-uno">
-                <img src="../img/galeria-classic1.jpg" alt="Imagen classic uno">
+            <div>
+                <img src="../img/galeria-classic1.jpg" alt="imagen de fresas con chocolate">
             </div>
-            <div class="galeria__img-dos">
-                <img src="../img/galeria-classic2.jpg" alt="imagen classic dos">
+            <div>
+                <img src="../img/galeria-classic3.jpg" alt="imagen de fresas con chocolate">
             </div>
-            <div class="galeria__img-tres">
-                <img src="../img/galeria-classic3.jpg" alt="imagen classic tres">
-            </div>
-            <div class="galeria__img-cuatro">
-                <img src="../img/galeria-classic4.jpg" alt="imagen classic cuatro">
-            </div>
-            <div class="galeria__img-cinco">
-                <img src="../img/galeria-classic5.jpg" alt="imagen classic cinco">
+            <div>
+                <img src="../img/galeria-classic4.jpg" alt="imagen imagen de fresas con chocolate">
             </div>
         </section>
     </main>
