--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -98,18 +98,18 @@
                     <form>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="correo@dominio.com">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="formFile" class="form-label">Default file input example</label>
+                            <label for="formFile" class="form-label">Adjunta tu CV</label>
                             <input class="form-control" type="file" id="formFile">
                         </div>
                             <input type="submit">
