--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -105,7 +105,7 @@
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="correo@dominio.com">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensajes</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                         <div class="mb-3">
