--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,11 +7,13 @@
     <meta name="keywords" content="frutillas, fresas, historia, emprendimiento">
     <meta name="description" content="quienes somos fresas con chocolate">
     <!-- link de tipografía -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
     <!-- link de mi bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link de mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Nosotros - Decofresas</title>
 </head>
 <body>
@@ -66,9 +68,9 @@
             </div>
         </section>
         <section class="nosotros-seccion2">
-            <h3>
+            <h2>
                 Nuestros provedores
-            </h3>
+            </h2>
             <div class="nosotros-seccion2__imgprov">
                 <div class="vacalin">
                     <a href="https://www.vacalin.com/" target="_blank"><img src="../img/vacalin-logo.png" alt="logo vacalin"></a></li>
