--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <meta name="keywords" content="frutillas, fresas, chocolate, regalos">
     <meta name="description" content="fresas decoradas con chocolate para regalar">
     <!-- link de tipografía -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
     <!-- link de mi bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link de mi css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Home - Decofresas</title>
 </head>
 <body >
     <!-- banner principal -->
     <header>
+      
         <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #FFDDEE;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
@@ -43,6 +46,8 @@
                 </div>
             </div>
         </nav>
+      </div>
+    
     </header>
     <!-- contenido principal -->
     <main>
