--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,11 +7,13 @@
     <meta name="keywords" content="frutillas, fresas, contacto, ubicación">
     <meta name="description" content="contacto para hacer un pedido">
     <!-- link de tipografía -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
     <!-- link de mi bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- link de mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto - Decofresas</title>
 </head>
 <body>
@@ -85,6 +87,9 @@
                     </table>
                     <a href="https://wa.me/5491130516222" target="_blank">
                         <h3 class="botom-contacto">Comunícate con nosotros</h3>
+                    </a>
+                    <a href="https://www.instagram.com/decofresas.arg/" target="_blank">
+                        <h3 class="botom-instagram">Visita nuestro Instagram</h3>
                     </a>
               </div>
             </div>
